<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="-3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_header" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        app:srcCompat="@drawable/ic_header_back" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/imageView7"
        android:text="@string/register2"
        android:textColor="@color/Background"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:layout_below="@id/imageView3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/username"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/phone"
        android:inputType="number"
        android:layout_below="@id/email"
        android:layout_marginLeft="20dp" />

    <ImageView
        android:id="@+id/radio_male"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/phone"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_register_radio_on" />

    <TextView
        android:id="@+id/txtMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:layout_below="@id/phone"
        android:layout_toRightOf="@id/radio_male"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/radio_female"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/phone"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_register_radio_off" />

    <TextView
        android:id="@+id/textFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Female"
        android:layout_below="@id/phone"
        android:layout_toRightOf="@id/radio_female"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="16dp" />

    <Spinner
        android:id="@+id/spinner_blood"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_male"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <Spinner
        android:id="@+id/spinner_reshus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_female"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="200dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_below="@id/spinner_blood"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/retype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/retype"
        android:inputType="textPassword"
        android:layout_below="@id/password"
        android:layout_marginLeft="20dp" />

    <ImageView
        android:id="@+id/radio_personal"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/retype"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_register_radio_on" />

    <TextView
        android:id="@+id/txtPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:layout_below="@id/retype"
        android:layout_toRightOf="@id/radio_male"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/radio_organization"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/retype"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_register_radio_off" />

    <TextView
        android:id="@+id/textOrganization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization"
        android:layout_below="@id/retype"
        android:layout_toRightOf="@id/radio_female"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:textSize="16dp" />

    <Spinner
        android:id="@+id/spinner_job"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_personal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/home_address"
        android:inputType="textPersonName"
        android:layout_below="@id/spinner_job"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />
    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/default_location"
        android:inputType="textPersonName"
        android:layout_below="@id/address"
        android:layout_marginLeft="20dp"
        android:drawableEnd="@drawable/ic_location_on_black_24dp" />

    <CheckBox
        android:id="@+id/checkBox_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_register"
        android:text="@string/agree"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:ems="19"
        android:text="@string/register"
        android:background="@drawable/btn_register"
        android:textColor="@color/lightBlue" />


</RelativeLayout>