<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".Almost_there">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Almost"
        android:textAlignment="center"
        android:textColor="@color/Background"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="287dp"
        android:layout_height="83dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="46dp"
        android:text="@string/Thank"
        android:textAlignment="center"
        android:textColor="@color/Background"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="308dp"
        android:width="300dp"
        android:text="@string/Verify"
        android:background="@drawable/btn"
        android:textColor="@color/Background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>