<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_header_profile" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/imageView4"
        android:layout_centerInParent="true"
        android:layout_marginTop="-40dp"
        android:src="@drawable/ic_profile_default_small"
        app:civ_circle_background_color="@color/greyColor"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="4dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_side_menu" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        app:srcCompat="@drawable/ic_notification" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/lightBlue" />

    <TextView
        android:id="@+id/text_blood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_type"
        android:textSize="14sp"
        android:layout_marginLeft="130dp"
        android:layout_below="@id/profile_name"
        />

    <TextView
        android:id="@+id/tipe_blood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="1dp"
        android:layout_below="@id/profile_name"
        android:layout_toRightOf="@id/text_blood" />

    <View
        android:id="@+id/view_top"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/text_blood"
        android:background="@color/shadow_header"
        android:layout_marginTop="7dp" />

    <TextView
        android:id="@+id/text_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="75"
        android:textSize="20dp"
        android:textColor="@color/lightBlue"
        android:layout_below="@id/view_top"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="70dp"
        />

    <TextView
        android:id="@+id/txt_blood_give"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_75"
        android:layout_marginLeft="58dp"
        android:textSize="10sp"
        android:text="BLOOD GIVE" />

    <TextView
        android:id="@+id/text_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="20dp"
        android:textColor="@color/lightBlue"
        android:layout_below="@id/view_top"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="160dp"
        />

    <TextView
        android:id="@+id/txt_blood_recieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_75"
        android:layout_marginLeft="146dp"
        android:textSize="10sp"
        android:text="BLOOD RECIEVE" />

    <TextView
        android:id="@+id/text_330"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="330"
        android:textSize="20dp"
        android:textColor="@color/lightBlue"
        android:layout_alignParentRight="true"
        android:layout_below="@id/view_top"
        android:layout_marginTop="7dp"
        android:layout_marginRight="68dp"
        />

    <TextView
        android:id="@+id/txt_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_330"
        android:layout_marginRight="66dp"
        android:textSize="10sp"
        android:text="THANKS" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/txt_blood_recieve"
        android:background="@color/shadow_header"
        android:layout_marginTop="7dp" />

    <ImageView
        android:id="@+id/search_donor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/view_bottom"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_search_donor" />

    <TextView
        android:id="@+id/txt_search_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_donor"
        android:layout_marginLeft="65dp"
        android:textSize="12sp"
        android:textColor="#000000"
        android:text="@string/txt_searchdonor" />

    <TextView
        android:id="@+id/txt_search_donor_near_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_search_donor"
        android:layout_marginLeft="55dp"
        android:textSize="9sp"
        android:text="@string/txt_searchdonor_near" />

    <ImageView
        android:id="@+id/icon_message"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/txt_search_donor_near_you"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_message" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_message"
        android:layout_marginLeft="75dp"
        android:textSize="12sp"
        android:textColor="#000000"
        android:text="@string/txt_message" />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_message"
        android:layout_marginLeft="65dp"
        android:textSize="9sp"
        android:text="@string/txt_message_desc" />

    <ImageView
        android:id="@+id/icon_blood_needed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/view_bottom"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        app:srcCompat="@drawable/ic_blood_needed" />

    <TextView
        android:id="@+id/txt_blood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_blood_needed"
        android:layout_alignParentRight="true"
        android:layout_marginRight="62dp"
        android:textSize="12sp"
        android:textColor="#000000"
        android:text="@string/txt_blood_need" />

    <TextView
        android:id="@+id/txt_blooddesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_blood"
        android:layout_alignParentRight="true"
        android:layout_marginRight="62dp"
        android:textSize="9sp"
        android:text="@string/txt_blood_need_desc" />

    <ImageView
        android:id="@+id/icon_donor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_blooddesc"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        app:srcCompat="@drawable/ic_blood_needed" />

    <TextView
        android:id="@+id/txt_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_donor"
        android:layout_alignParentRight="true"
        android:layout_marginRight="61dp"
        android:textSize="12sp"
        android:textColor="#000000"
        android:text="@string/txt_donor_history" />

    <TextView
        android:id="@+id/txt_donordesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_donor"
        android:layout_alignParentRight="true"
        android:layout_marginRight="62dp"
        android:textSize="9sp"
        android:text="@string/txt_donor_history_desc" />

</RelativeLayout>